fix error endpoint on swagger
